@@ -101,4 +101,8 @@ warn_about_unrecognized_perfume_target = true
 ; The AI production ranking is the point value the AI gives to each available build in some city. To view it, press P while viewing an AI city.
 enable_ai_production_ranking = true
 
+; Shades/highlights each tile to show how desirable the AI considers it as a city location. To activate, press L while in game. The scale goes from
+; white (least desirable) to red (most desirable) with yellow in between. Also the exact number the AI gives any tile can be seen on its info box.
+enable_ai_city_location_desirability_display = true
+
 zero_corruption_when_off = false
