@@ -181,6 +181,8 @@ load_config (char const * filename, struct c3x_config * cfg)
 					cfg->warn_about_unrecognized_perfume_target = ival != 0;
 				else if ((0 == strncmp (key.str, "enable_ai_production_ranking", key.len)) && read_int (&value, &ival))
 					cfg->enable_ai_production_ranking = ival != 0;
+				else if ((0 == strncmp (key.str, "enable_ai_city_location_desirability_display", key.len)) && read_int (&value, &ival))
+					cfg->enable_ai_city_location_desirability_display = ival != 0;
 				else if ((0 == strncmp (key.str, "zero_corruption_when_off", key.len)) && read_int (&value, &ival))
 					cfg->zero_corruption_when_off = ival;
 
@@ -3086,7 +3088,8 @@ void __fastcall
 patch_Main_Screen_Form_m82_handle_key_event (Main_Screen_Form * this, int edx, int virtual_key_code, int is_down)
 {
 	char s[200];
-	if ((virtual_key_code == VK_L) && is_down &&
+	if (is->current_config.enable_ai_city_location_desirability_display &&
+	    (virtual_key_code == VK_L) && is_down &&
 	    (*p_player_bits != 0)) { // Player bits all zero indicates we aren't currently in a game. Need to check for this because UI events on the
 		                     // main menu also pass through this function.
 		int is_debug_mode = (*p_debug_mode_bits & 4) != 0; // This is how the check is done in open_tile_info. Actually there are two debug
